[package]
name = "DES"
authors = ["Andrii Kurochka <andriikurochka@ukr.net>"]
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rfd = "0.11"
regex = "1.5"
env_logger = "0.10"
eframe = "0.24.1"
winit = "0.29.4"
threadpool = "1.8.1"
num_cpus = "1.16.0"
rayon = "1.8.0"

[profile.release]
lto = "fat"
codegen-units = 1



